--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "vitest"
   },
   "devDependencies": {
+    "vite": "^5.4.0",
     "vitest": "^1.6.0"
   }
 }
